<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewSwitcher
            android:id="@+id/simpleViewSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/background_ImageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/background_plants" />
            <ImageView
                android:id="@+id/background_ImageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/background_plants_night1" />
        </ViewSwitcher>
        <ImageView
            android:id="@+id/animatedGif_ImageView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_placeholder" />
        <ImageView
            android:id="@+id/animatedGif_ImageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_placeholder" />
        <ImageView
            android:id="@+id/animatedGif_ImageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_placeholder" />
        <ImageView
            android:id="@+id/animatedGif_ImageView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_placeholder" />
        <ImageView
            android:id="@+id/animatedGif_ImageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_placeholder" />
        <ImageView
            android:id="@+id/animatedGif_ImageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_placeholder" />
        <ImageView
            android:id="@+id/animatedGif_ImageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_placeholder" />

        <ImageView
            android:id="@+id/animatedGif_ImageView8"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_empty_placeholder" />

        <!--<TextView-->
            <!--android:id="@+id/data_waterlevel1"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="false"-->
            <!--android:layout_marginLeft="245dp"-->
            <!--android:layout_marginRight="@dimen/cardview_compat_inset_shadow"-->
            <!--android:layout_marginBottom="100dp"-->
            <!--android:fontFamily="sans-serif-black"-->
            <!--android:gravity="clip_horizontal"-->
            <!--android:text="Full "-->
            <!--android:textColor="#03A9F4"-->
            <!--android:textSize="24sp" />-->

        <!--<TextView-->
            <!--android:id="@+id/data_watertemp1"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="false"-->
            <!--android:layout_marginLeft="140dp"-->
            <!--android:layout_marginRight="@dimen/cardview_compat_inset_shadow"-->
            <!--android:layout_marginBottom="60dp"-->
            <!--android:fontFamily="sans-serif-black"-->
            <!--android:gravity="clip_horizontal"-->
            <!--android:text="20.0"-->
            <!--android:textSize="24sp" />-->

        <!--<TextView-->
            <!--android:id="@+id/data_ambtemp1"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentBottom="false"-->
            <!--android:layout_centerHorizontal="false"-->
            <!--android:layout_marginLeft="40dp"-->
            <!--android:layout_marginTop="180dp"-->
            <!--android:layout_marginRight="@dimen/cardview_compat_inset_shadow"-->
            <!--android:fontFamily="sans-serif-black"-->
            <!--android:gravity="clip_horizontal"-->
            <!--android:textColor="#FF5722"-->
            <!--android:textSize="24sp" />-->

        <!--<TextView-->
            <!--android:id="@+id/data_sunlight1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="false"-->
            <!--android:layout_alignParentLeft="false"-->
            <!--android:layout_alignParentEnd="false"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentBottom="false"-->
            <!--android:layout_centerHorizontal="false"-->
            <!--android:layout_marginTop="100dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:fontFamily="sans-serif-black"-->
            <!--android:gravity="clip_horizontal"-->
            <!--android:text="30"-->
            <!--android:textColor="#FFEB3B"-->
            <!--android:textSize="24sp" />-->

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0.7dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp"
        card_view:contentPaddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_tank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="top"
                android:text="@string/system_title_1"
                android:textSize="@dimen/data_title_size"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/text_waterlevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tank"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_title_1"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/text_watertemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_waterlevel"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_title_2"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/text_sunlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_watertemp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_title_3"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/text_electricalconductivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_sunlight"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_title_4"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/text_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_electricalconductivity"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_title_5"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/data_waterlevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tank"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_1"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/data_watertemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_waterlevel"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_2"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/data_sunlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_watertemp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_3"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/data_electricalconductivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_sunlight"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_4"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/data_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_electricalconductivity"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_5"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/data_data_size" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0.7dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp"
        card_view:contentPaddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_surrounding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="top"
                android:text="@string/system_title_2"
                android:textSize="@dimen/data_title_size"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/text_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_surrounding"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_title_6"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/text_ambtemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_humidity"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_title_7"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/data_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_surrounding"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_6"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/data_data_size" />

            <TextView
                android:id="@+id/data_ambtemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_humidity"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/data_7"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/data_data_size" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>